[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/City.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/AlienRobot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/ScoreUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Win.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/AudioStreamPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Killed.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fonts/EvilEmpire-4BBVK.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/Victory.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Pause.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Continue.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 10
outline_color = Color( 0.447059, 0.164706, 0.952941, 1 )
font_data = ExtResource( 9 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="City" parent="." instance=ExtResource( 2 )]
position = Vector2( 638.855, 369.403 )

[node name="Character" parent="." instance=ExtResource( 1 )]
position = Vector2( 135.899, 525.225 )

[node name="AlienRobot" parent="." instance=ExtResource( 3 )]
position = Vector2( 1211.68, 718.95 )
speed = 50

[node name="AlienRobot2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1041.29, 721.085 )
speed = 50

[node name="Score" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0

[node name="AudioStreamPlayer2D" parent="." instance=ExtResource( 7 )]

[node name="Killed" parent="." instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0

[node name="Label" parent="." instance=ExtResource( 10 )]
visible = false
anchor_left = 0.0
anchor_right = 0.0
margin_left = 259.112
margin_top = 111.197
margin_right = 1074.11
margin_bottom = 237.197

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 429.05
margin_top = 415.983
margin_right = 890.05
margin_bottom = 547.983
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" parent="." instance=ExtResource( 6 )]

[node name="Pause" parent="." instance=ExtResource( 11 )]
margin_left = 1160.0
margin_top = 20.0
margin_right = 1240.0
margin_bottom = 100.0

[node name="Continue" parent="." instance=ExtResource( 12 )]
margin_left = 577.0
margin_top = 266.0
margin_right = 777.0
margin_bottom = 466.0

[node name="AlienRobot3" parent="." instance=ExtResource( 3 )]
position = Vector2( 900, 721.085 )
speed = 50

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
